[package]
name = "ruspiro-mmio-register"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.1.4" # remember to update html_root_url in lib.rs
description = """
The crate provides macros to conviniently define memory mapped I/O (MMIO) registers.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-mmio-register/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-mmio-register/||VERSION||"
categories = ["no-std", "embedded"]
keywords = ["ruspiro", "mmio", "register", "raspberrypi"]
edition = "2021"
exclude = ["Makefile.toml", ".cargo/config.toml", ".github"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-register = "~0.5.5"

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
features = []

[patch.crates-io]
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git", branch = "development" }
